--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --progress --config ./webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack -p --config ./webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack -p --config ./webpack.config.prod.js",
+    "build:rollup": "rimraf dist && cross-env NODE_ENV=production rollup --config ./rollup.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -16,6 +17,9 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "autoprefixer": "9.6.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
@@ -33,6 +37,12 @@
     "postcss-loader": "3.0.0",
     "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.40.0",
+    "rollup-plugin-image-files": "^1.4.2",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "7.3.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "2.1.2",
