--- a/package.json
+++ b/package.json
@@ -53,8 +53,13 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "random-number": "^1.0.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "tezign-ui": "^2.26.30"
+    "rnum": "1.1.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
