--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --progress --config ./webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack -p --config ./webpack.config.prod.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack -p --config ./webpack.config.prod.js",
     "build:rollup": "rimraf dist && cross-env NODE_ENV=production rollup --config ./rollup.config.js"
   },
   "devDependencies": {
@@ -53,7 +53,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "random-number": "^1.0.9",
+    "random-number": "1.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rnum": "1.1.0"
